--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -33,6 +33,10 @@ h4{
 }
 .card{
     margin: 10px 20px 10px;
+    transition:all ease-out 0.2s;
+}
+.card:hover{
+    transform: scale(1.05);
 }
 .servicios2{
     margin-top: 40px;
