--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -86,3 +86,9 @@ h4{
 .nuestra{
     width: 100%;
 }
+.lent{
+    color: blanchedalmond;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    color: rgb(255, 255, 255);
+}
