--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -92,3 +92,11 @@ h4{
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
     color: rgb(255, 255, 255);
 }
+h4{
+    font-size: 1.5rem;
+    padding: 10px;
+    font-family: eras itc;
+}
+.faj{
+    width: 60%;
+}
