--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -62,13 +62,10 @@ h4{
 .cen{
     display: flex;
     justify-content: center;
+    margin-top: 8px;
 }
 .maps{
     margin-top: 50px;
-}
-.cen{
-    margin-top: 25px;
-    margin-left: 100px;
 }
 .cen1{
     margin-top: 8px;
@@ -121,4 +118,7 @@ h4{
 }
 h3{
     font-size: 1.5rem;
+}
+.sn{
+    margin: 0% 10% 0%;
 }
